ShopNow/sf/force-app/main/default/objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <description>Stores customer sign-up details.</description>
    <label>Customer</label>
    <pluralLabel>Customers</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Customer</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>