ShopNow/sf/force-app/main/default/objects/Customer__c/fields/Merged_Into__c.field-meta.xml
<CustomField>
    <fullName>Merged_Into__c</fullName>
    <label>Merged Into</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Merged Into</relationshipLabel>
    <relationshipName>MergedInto</relationshipName>
    <type>Lookup</type>
</CustomField>